--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+.xyz{
+    padding-top: 20px;
+    padding-left: 30px;
+    padding-right: 80px;
+    padding-bottom: 20px;
+}
+
+div{
+    padding-top: 10px;
+}
