--- a/src/app/components/product-master/product-master.component.html
+++ b/src/app/components/product-master/product-master.component.html
@@ -1,16 +1,18 @@
-<div class="xyz">
+<div class="container-fluid">
 
   <h3>New Mobile</h3>
   <app-brand-master (childEvent)="message=$event" (postBrand)="brName=$event" [brand]="brand" [dataName]="myName">
   </app-brand-master>
   <h1>{{message}}</h1>
   <h1>{{brName}}</h1>
-  <form>
+
+  {{productMaster.value|json}}
+  <form #productMaster="ngForm">
     <div class="row">
 
       <label for="brand">Brand</label>
       <div class="form-group col">
-        <select class="form-control" id="brand">
+        <select class="form-control" id="brand" name="brand" ngModel>
           <option *ngFor="let b of brands" value="{{b._id}}">{{b.name}}</option>
         </select>
       </div>
@@ -20,19 +22,19 @@
     </div>
     <div class="form-group">
       <label for="modelName" class="form-label">Model Name</label>
-      <input type="email" class="form-control" id="modelName" placeholder="14 Pro Max 128 GB">
+      <input type="text" class="form-control" id="modelName" placeholder="14 Pro Max 128 GB" name="modelName" ngModel>
     </div>
     <div class="form-group">
       <label for="color" class="form-label">Color</label>
-      <input type="email" class="form-control" id="color" placeholder="Deep Purple">
+      <input type="text" class="form-control" id="color" placeholder="Deep Purple" name="color" ngModel>
     </div>
     <div class="form-group">
       <label for="countryOfOrigin" class="form-label">Country of origin</label>
-      <input type="email" class="form-control" id="countryOfOrigin" placeholder="India">
+      <input type="text" class="form-control" id="countryOfOrigin" placeholder="India" name="countryOfOrigin" ngModel>
     </div>
     <div class="form-group">
       <label for="ASIN" class="form-label">Amazon ASIN</label>
-      <input type="email" class="form-control" id="ASIN" placeholder="B0BDHV1TZ4">
+      <input type="text" class="form-control" id="ASIN" placeholder="B0BDHV1TZ4" name="asin" ngModel>
     </div>
     <div>
       <button type="submit" class="btn btn-primary">Submit</button>
