--- a/src/app/components/brand-master/brand-master.component.html
+++ b/src/app/components/brand-master/brand-master.component.html
@@ -1,16 +1,7 @@
-<h4>Add New Brand</h4>
-<h6>
-  {{"Hello " + name}}
-</h6>
-
-<button (click)="fireEvent()">Send Event</button>
-
-<form #addBrandForm="ngForm" (ngSubmit)="onSubmit()" action="">
+<form #addBrandForm="ngForm" (ngSubmit)="onSubmit(addBrandForm)" action="">
   <div class="form-group">
     <label for="name" class="form-label">Brand Name</label>
-    <input class="form-control" id="name">
+    <input class="form-control" id="brand" name="name" [(ngModel)]="name">
   </div>
-  <div>
-    <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
-  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
