--- a/src/app/components/brand-master/brand-master.component.html
+++ b/src/app/components/brand-master/brand-master.component.html
@@ -3,5 +3,7 @@
     <label for="name" class="form-label">Brand Name</label>
     <input class="form-control" id="brand" name="name" [(ngModel)]="name">
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <div class="form-group mb3">
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
 </form>
