--- a/src/app/components/product-master/product-master.component.html
+++ b/src/app/components/product-master/product-master.component.html
@@ -6,12 +6,13 @@
       <h3>New Mobile</h3>
       <app-toast-notification #toast></app-toast-notification>
 
-      <form #productMaster="ngForm" (ngSubmit)="addModel(productMaster)">
+      <form #productMaster="ngForm">
         <div class="row">
           <label for="brand">Brand</label>
-          <div class="form-group col-9">
-            <select class="form-control" id="brand" name="brandName" [(ngModel)]="mobile.brandName">
-              <option value="">select a brand</option>
+          <div class="form-group mb-3 col-9">
+            <!-- autocomplete -->
+            <select class="form-select"  name="brandName" [(ngModel)]="mobile.brandName">
+              <option value="{{mobile.brandName}}" selected>{{mobile.brandName.name}}</option>
               <option *ngFor="let b of brands" [ngValue]="{ _id: b._id, name: b.name }">{{b.name}}</option>
             </select>
           </div>
@@ -20,38 +21,59 @@
               Brand</button>
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group mb-3">
           <label for="modelName" class="form-label">Model Name</label>
           <input type="text" class="form-control" placeholder="14 Pro Max 128 GB" name="modelName"
             [(ngModel)]="mobile.modelName">
         </div>
-        <div class="form-group">
+        <div class="form-group mb-3">
           <label for="color" class="form-label">Color</label>
           <input type="text" class="form-control" id="color" placeholder="Deep Purple" name="color"
             [(ngModel)]="mobile.color">
         </div>
-        <div class="form-group">
+        <div class="form-group mb-3">
           <label for="countryOfOrigin" class="form-label">Country of origin</label>
           <input type="text" class="form-control" id="countryOfOrigin" placeholder="India" name="countryOfOrigin"
             [(ngModel)]="mobile.countryOfOrigin">
         </div>
-        <div class="form-group">
+        <div class="form-group mb-3">
           <label for="ASIN" class="form-label">Amazon ASIN</label>
-          <input type="text" class="form-control" id="asin" placeholder="B0BDHV1TZ4" name="asin"
-            [(ngModel)]="mobile.asin">
+          <input type="text" class="form-control" id="asin" placeholder="B0BDHV1TZ4" name="asin" [(ngModel)]="mobile.asin">
         </div>
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="form-group mb-3">
+          <label for="closingStock " class="form-label">Closing Stock</label>
+          <input type="number" class="form-control"  name="closingStock" [(ngModel)]="mobile.closingStock">
         </div>
+        <div class="form-group mb-3">
+          <label for="sellingPrice" class="form-label">Selling Price</label>
+          <input type="number" class="form-control" name="sellingPrice" [(ngModel)]="mobile.sellingPrice">
+        </div>
+
+        <div class="form-group mb-3" *ngIf="!mobile._id">
+          <button type="submit" class="btn btn-primary" (click)="addModel(productMaster)">Submit</button>
+        </div>
+        <div *ngIf="mobile._id">
+          <div class="form-group mb-3">
+            <div class="form-group mb-3">
+              <p>Created on: <strong>{{mobile.createdOn}}</strong></p>
+              <p>Last updated on: <strong>{{mobile.lastUpdated}}</strong></p>
+              <div class="form-group mb-3" >
+                <button type="submit" class="btn btn-primary" (click)="updateMobile(productMaster)">Update</button>
+              </div>              
+            </div>
+          </div>
+        </div>
+        
       </form>
     </div>
     <div class="col m12">
-      <table class="resposive-table">
+      <table class="table">
         <thead>
           <tr>
             <th>Brand</th>
             <th>Model</th>
             <th>Color</th>
+            <th></th>
             <th></th>
           </tr>
         </thead>
@@ -60,10 +82,9 @@
             <td>{{m.brandName.name}}</td>
             <td>{{m.modelName}}</td>
             <td>{{m.color}}</td>
-            <td><a (click)="onEdit(m)">
-                <i class="bi bi-pencil"></i>
-              </a>
-            </td>
+              <td><a (click)="onEdit(m)"><i class="bi bi-pencil-square"></i></a></td>
+              <td><a  (click)="deleteMobile(m._id)" ><i class="bi bi-trash"></i></a></td>
+          
           </tr>
         </tbody>
       </table>
@@ -79,7 +100,7 @@
         <button type="button" class="btn-close" (click)="closeModal()" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <app-brand-master (childEvent)="message=$event"> </app-brand-master>
+        <app-brand-master (addBrandEvent)="addNewBrand($event)" > </app-brand-master>
       </div>
     </div>
   </div>
