--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -6,77 +6,39 @@
           <div class="card" style="width: 16rem;">
             <div class="card-body">
               <h5 class="card-title">Add New Mobile</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="/mobiles/new" class="btn btn-primary">Go somewhere</a>
+              <a routerLink="/mobiles/new" class="btn btn-primary">Products</a>
             </div>
           </div>
         </td>
         <td>
           <div class="card" style="width: 16rem;">
             <div class="card-body">
-              <h5 class="card-title">Sales</h5>
-              <a href="/voucher/sales/new" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Check Sales Voucher</h5>
+              <a routerLink="/voucher/sales" class="btn btn-primary">Sales</a>
             </div>
           </div>
         </td>
         <td>
           <div class="card" style="width: 16rem;">
             <div class="card-body">
-              <h5 class="card-title">Purchases</h5>
-              <a href="voucher/purchases/new" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Check Purchases List</h5>
+              <a routerLink="/voucher/purchases" class="btn btn-primary">Purchases</a>
             </div>
           </div>
         </td>
         <td>
           <div class="card" style="width: 16rem;">
             <div class="card-body">
-              <h5 class="card-title">Purchases</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="/mobiles/new" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <div class="card" style="width: 16rem;">
-            <div class="card-body">
-              <h5 class="card-title">Add New Mobile</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="/mobiles/new" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Check Creditors List</h5>
+              <a href="/masters/creditors" class="btn btn-primary">Creditors</a>
             </div>
           </div>
         </td>
         <td>
           <div class="card" style="width: 16rem;">
             <div class="card-body">
-              <h5 class="card-title">Sales</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="/mobiles/new" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </td>
-        <td>
-          <div class="card" style="width: 16rem;">
-            <div class="card-body">
-              <h5 class="card-title">Purchases</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="/mobiles/new" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </td>
-        <td>
-          <div class="card" style="width: 16rem;">
-            <div class="card-body">
-              <h5 class="card-title">Purchases</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="/mobiles/new" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Check Debtors List</h5>
+              <a href="/master/debtors" class="btn btn-primary">Debtors</a>
             </div>
           </div>
         </td>
