Purchase form completed

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,43 +1,42 @@
-<div class="container-fluid">
-  <div>
+<div class="container">
     <table>
       <tr>
         <td>
-          <div class="card" style="width: 16rem;">
+          <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Add New Mobile</h5>
+              <h3 class="card-title">Add New Mobile</h3>
               <a routerLink="/mobiles/new" class="btn btn-primary">Products</a>
             </div>
           </div>
         </td>
         <td>
-          <div class="card" style="width: 16rem;">
+          <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Check Sales Voucher</h5>
+              <h3 class="card-title">Check Sales Voucher</h3>
               <a routerLink="/voucher/sales" class="btn btn-primary">Sales</a>
             </div>
           </div>
         </td>
         <td>
-          <div class="card" style="width: 16rem;">
+          <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Check Purchases List</h5>
+              <h3 class="card-title">Check Purchases List</h3>
               <a routerLink="/voucher/purchases" class="btn btn-primary">Purchases</a>
             </div>
           </div>
         </td>
         <td>
-          <div class="card" style="width: 16rem;">
+          <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Check Creditors List</h5>
+              <h3 class="card-title">Check Creditors List</h3>
               <a href="/masters/creditors" class="btn btn-primary">Creditors</a>
             </div>
           </div>
         </td>
         <td>
-          <div class="card" style="width: 16rem;">
+          <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Check Debtors List</h5>
+              <h3 class="card-title">Check Debtors List</h3>
               <a href="/master/debtors" class="btn btn-primary">Debtors</a>
             </div>
           </div>
@@ -45,5 +44,4 @@
       </tr>
 
     </table>
-  </div>
 </div>
