--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Net Media</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -8,33 +8,38 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/dashboard">Dashboard</a>
+          <a class="nav-link active" aria-current="page" routerLink="/voucher/sales/new">Sales</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link active" aria-current="page" routerLink="/voucher/purchases/new">Purchases</a>
         </li>
+        
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Links
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" routerLink="/mobiles/new">Add Product</a></li>
+            <li><a class="dropdown-item" routerLink="master/debtors/new">Add Debtors</a></li>
+            <li><a class="dropdown-item" routerLink="master/creditors/new">Add Creditors</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" routerLink="master/debtors">Debtors List</a></li>
+            <li><a class="dropdown-item" routerLink="master/creditors">Creditors List</a></li>
+            <li><a class="dropdown-item" routerLink="voucher/sales">Sales List</a></li>
+            <li><a class="dropdown-item" routerLink="voucher/purchases">Purchases List</a></li>
           </ul>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
-        </li>
+        </li> -->
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<div class="bgimg">
+  <router-outlet ></router-outlet>
+</div>
+
+  <!-- <img src="assets/images/bg.jpg" alt=""> -->
