--- a/src/app/components/sales-voucher/sales-voucher.component.html
+++ b/src/app/components/sales-voucher/sales-voucher.component.html
@@ -1,8 +1,7 @@
 <form [formGroup]="SalesInvoiceForm" #salesForm (ngSubmit)="savePurchase(salesForm)" class="container">
     
-    <div class="card">
-        <h3>{{pageTitle}}</h3>
-        <div class="card-body">
+            <h2>{{pageTitle}}</h2>
+            <hr>
         <app-toast-notification #toast></app-toast-notification>
   
       <p>
@@ -53,13 +52,10 @@
           </div>      
         </div>
       </div>
-      
-  
-      
-  
+      <hr>  
       <div class="row">
         <div class="col-lg-12">
-          <table class="table table-bordered" formArrayName="details">
+          <table class="table" formArrayName="details">
             <thead>
               <tr>
                 <td>Sr No.</td>
@@ -126,10 +122,6 @@
         <div class="col-lg-12">
           <button class="btn btn-success">Save</button>
         </div>
-      
-  
-    </div>
-  </div>
   </form>
   
   
