--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.btn-primary {
+    margin-top: 1rem;
+    background-color: rgb(82, 180, 197);
+    color: white;
+    border-color: rgb(82, 180, 197);
+    box-shadow: 5rem;
+}
+
+.container {
+    margin-top: 4rem;
+}
