sales component completed

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -20,13 +20,13 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" routerLink="/mobiles/new">Add Product</a></li>
-            <li><a class="dropdown-item" routerLink="master/debtors/new">Add Debtors</a></li>
-            <li><a class="dropdown-item" routerLink="master/creditors/new">Add Creditors</a></li>
+            <li><a class="dropdown-item" routerLink="masters/debtors/new">Add Debtors</a></li>
+            <li><a class="dropdown-item" routerLink="masters/creditors/new">Add Creditors</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" routerLink="master/debtors">Debtors List</a></li>
-            <li><a class="dropdown-item" routerLink="master/creditors">Creditors List</a></li>
+            <li><a class="dropdown-item" routerLink="masters/debtors">Debtors List</a></li>
+            <li><a class="dropdown-item" routerLink="masters/creditors">Creditors List</a></li>
             <li><a class="dropdown-item" routerLink="voucher/sales">Sales List</a></li>
             <li><a class="dropdown-item" routerLink="voucher/purchases">Purchases List</a></li>
           </ul>
@@ -39,7 +39,8 @@
   </div>
 </nav>
 <div class="bgimg">
+</div>
+<div class="contnr">
   <router-outlet ></router-outlet>
 </div>
 
-  <!-- <img src="assets/images/bg.jpg" alt=""> -->
