--- a/src/app/components/sales-voucher/sales-voucher.component.html
+++ b/src/app/components/sales-voucher/sales-voucher.component.html
@@ -4,10 +4,6 @@
             <hr>
         <app-toast-notification #toast></app-toast-notification>
   
-      <p>
-    {{SalesInvoiceForm.value|json}}
-      </p>
-  
       <div class="row">
         <div class="col-lg-12">
           <div class="row">
@@ -24,11 +20,16 @@
                 <input formControlName="date" type="date" class="form-control">          
             </div>
           </div>
-          <div class="form-group">
-            <label for="creditorName" class="form-label">Party Name</label>          
-              <select formControlName="debtorName" type="text" class="form-select" (change)="onSelectDebtor()">
+          <div class="row">
+            <div class="form-group col-10">
+              <label for="debtor" class="form-label">Party Name</label>          
+              <select formControlName="debtor" type="text" class="form-select" (change)="onSelectDebtor()">
                 <option value="{{d._id}}" *ngFor="let d of masterDebtor">{{d.businessName}}</option>
               </select>
+            </div>
+            <div class="col-2">
+              <button disabled class="btn btn-light" >Add Debtor</button>
+            </div>
           </div>
           <div class="row">
             <div class="form-group col-lg-6">
@@ -37,17 +38,17 @@
             </div>
             <div class="form-group col-lg-6">
               <label for="deliveryAddress" class="form-label">Delivery Address</label>          
-                <textarea formControlName="address" type="text" class="form-control"></textarea>          
+                <textarea formControlName="deliveryAddress" type="text" class="form-control"></textarea>          
             </div>
           </div> 
           <div class="row">
-            <div class="form-group col-lg-4">
+            <div class="form-group col-lg-6">
               <label for="phone" class="form-label">Phone</label>          
                 <input formControlName="phone" type="text" class="form-control">          
             </div>
-            <div class="form-group col-lg-4">
-              <label for="phone2" class="form-label">Phone 2</label>          
-                <input formControlName="phone2" type="text" class="form-control">          
+            <div class="form-group col-lg-6">
+              <label for="delPhone" class="form-label">Delivery Phone</label>          
+                <input formControlName="delPhone" type="text" class="form-control">          
             </div>
           </div>      
         </div>
@@ -62,6 +63,7 @@
                 <td>Brand</td>
                 <td>Product</td>
                 <td>IMEI</td>             
+                <td>GST</td>             
                 <td>Price</td>
                 <td>Action</td>
               </tr>
@@ -75,10 +77,14 @@
                   </select>
                 </td>
                 <td>
-                  <select  formControlName="product" (change)="onProductSelect(i)" class="form-select">
-                    <option value="">select a model</option>
-                    <option *ngFor="let p of masterProduct[i]" [ngValue]="p._id" >{{p.modelName}}</option>
-                  </select>
+                  <div class="row">
+                    <select  (change)="onSelectProduct(i)" formControlName="product"  class="form-select">
+                      <option *ngFor="let p of masterProduct[i]" [ngValue]="p._id" >{{p.modelName}}</option>
+                    </select>
+                  </div>
+                  <div class="row">
+                    <p *ngIf="hsn[i]">HSN: {{hsn[i]}}</p>
+                  </div>
                 </td>
                 <td>
                   <select  formControlName="imei"  class="form-select">
@@ -86,20 +92,28 @@
                     <option *ngFor="let e of masterImei[i]" [ngValue]="e._id" >{{e.imeiNumber}}</option>
                   </select>
                 </td>
-                <td><input (change)="priceChange()"  formControlName="amount" type="number" class="form-control"></td>
-                <td><i (click)="deleteRow(i)" class="bi bi-trash"></i></td>
+                <td>
+                  <div class="row">
+                    <input  formControlName="gst" type="number" class="form-control">
+                  </div>
+                  <div class="row">
+                    <p *ngIf="gst[i]">{{gst[i]}} </p>
+                  </div>
+                </td>
+                <td>
+                  <input (change)="priceChange(i)"  formControlName="amount" type="number" class="form-control">
+                </td>
+                <td>
+                   <i (click)="deleteRow(i)" class="bi bi-trash"></i>
+                   <i (click)="costPrice(i)" *ngIf="masterImei[i]" [ngClass]=" showCost? 'bi bi-info-circle' :'bi bi-info-circle-fill'"></i>
+                </td>
               </tr>
-  
-            </tbody>
-            <tfoot>
-              <tr>
-                <td><a (click)="addProduct()" class="btn btn-success"><i class="bi bi-plus-lg"></i></a></td>
-              </tr>
-            </tfoot>
+            </tbody>            
           </table>
         </div>
       </div>
-  
+      <a *ngIf="SalesInvoiceForm.get('debtor').value" (click)="addProduct()" class="btn btn-success"><i class="bi bi-plus-lg"></i></a>
+      <hr>  
       <div class="row">
         <div class="col-lg-4">
           <div class="form-group"><label for="" class="form-label">Summary Total</label>
@@ -107,8 +121,23 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <div class="form-group"><label for="" class="form-label">GST</label>
-            <input type="text" class="form-control" formControlName="gst">
+          <div class="form-group">
+            <div  *ngIf="isIntraState;else interState" class="row">
+              <div class="col-lg-6">
+              <label for="cgst" class="form-label">CGST</label>
+              <input type="text" class="form-control" formControlName="cgst">
+              </div>
+            <div class="col-lg-6">
+              <label for="sgst" class="form-label">SGST</label>
+              <input type="text" class="form-control" formControlName="sgst">
+              </div>
+            </div>
+            <ng-template #interState>
+                <div class="col-lg-12">
+                  <label for="igst" class="form-label">IGST</label>
+                  <input type="text" class="form-control" formControlName="igst">
+                </div>
+            </ng-template>
           </div>
         </div>
         <div class="col-lg-4">
@@ -120,7 +149,7 @@
   
       
         <div class="col-lg-12">
-          <button class="btn btn-success">Save</button>
+          <button class="btn btn-primary">Save</button>
         </div>
   </form>
   
