--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,10 @@ body {
     box-shadow: 5rem;
 }
 
+.form-label {
+    margin-top: 0.5rem;
+}
+
 .container {
-    margin-top: 4rem;
+    margin-top: 2rem;
 }
