purchase list sales list created

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -33,6 +33,9 @@
             </div>
           </div>
         </td>
+        
+      </tr>
+      <tr>
         <td>
           <div class="card">
             <div class="card-body">
@@ -41,6 +44,31 @@
             </div>
           </div>
         </td>
+        <td>
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Check Inventory List</h3>
+              <a href="/master/debtors" class="btn btn-primary">Inventory</a>
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Cash Bank Ac</h3>
+              <a href="/master/debtors" class="btn btn-primary">Cash/Bank</a>
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Company Profile</h3>
+              <a href="/master/debtors" class="btn btn-primary">Profile</a>
+            </div>
+          </div>
+        </td>
+
       </tr>
 
     </table>
