--- a/src/app/components/purchase-voucher/purchase-voucher.component.html
+++ b/src/app/components/purchase-voucher/purchase-voucher.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="PurchaseInvoiceForm" #purchaseForm (ngSubmit)="savePurchase(purchaseForm)" class="container">
   
   
-    <h2>{{pageTitle}}</h2>
+    <h2 style="text-align: center;margin-top: 0.5rem;">{{pageTitle}}</h2>
     <hr>
   
     <app-toast-notification #toast></app-toast-notification>
