--- a/src/app/components/app/app.component.scss
+++ b/src/app/components/app/app.component.scss
@@ -10,11 +10,11 @@
     z-index: -1;
 }
 
-.contnr {
-    overflow-y: auto;
-    height: 100vh;
-    padding: 60px;
-}
+// .contnr {
+//     overflow-y: auto;
+//     height: 100vh;
+//     padding: 60px;
+// }
 
 .navbar {
     background-color: rgb(82, 180, 197);
