--- a/src/app/components/product-master/product-master.component.html
+++ b/src/app/components/product-master/product-master.component.html
@@ -1,13 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col m12">
-      <h3>New Mobile</h3>
+      <h2>New Mobile</h2>
       <app-toast-notification #toast></app-toast-notification>
-<p>{{productMaster.value|json}} </p>
       <form #productMaster="ngForm">
         <div class="row">
           <label for="brand">Brand</label>
-          <div class="form-group mb-3 col-9">
+          <div class="form-group col-9">
             <!-- autocomplete -->
             <select class="form-select"  name="brandName" [(ngModel)]="mobile.brandName">
               <option value="{{mobile.brandName}}">{{mobile.brandName.name}}</option>
@@ -15,52 +14,52 @@
             </select>
           </div>
           <div class="col-3">
-            <button class="btn btn-light" (click)="showModal()"><i class="bi bi-plus-square"></i> Add
+            <button class="btn btn-light" (click)="showBrandModal()"><i class="bi bi-plus-square"></i> Add
               Brand</button>
           </div>
         </div>
-        <div class="form-group mb-3">
+        <div class="form-group">
           <label for="modelName" class="form-label">Model Name</label>
           <input type="text" class="form-control" placeholder="14 Pro Max 128 GB" name="modelName"
             [(ngModel)]="mobile.modelName">
         </div>
-        <div class="form-group mb-3">
+        <div class="form-group">
           <label for="color" class="form-label">Color</label>
           <input type="text" class="form-control" id="color" placeholder="Deep Purple" name="color"
             [(ngModel)]="mobile.color">
         </div>
-        <div class="form-group mb-3">
+        <div class="form-group">
           <label for="countryOfOrigin" class="form-label">Country of origin</label>
           <input type="text" class="form-control" id="countryOfOrigin" placeholder="India" name="countryOfOrigin"
             [(ngModel)]="mobile.countryOfOrigin">
         </div>
         <div class="row">
-          <div class="form-group mb-3 col">
+          <div class="form-group col">
             <label for="gstRate" class="form-label">GST Rate(%)</label>
             <input type="number" class="form-control" id="gstRate" placeholder="18" name="gstRate" [(ngModel)]="mobile.gstRate">
           </div>
-          <div class="form-group mb-3 col">
+          <div class="form-group col">
             <label for="hsn" class="form-label">HSN</label>
             <input type="number" class="form-control" id="hsn" placeholder="8517" name="hsn" [(ngModel)]="mobile.hsn">
           </div>
-          <div class="form-group mb-3 col">
+          <div class="form-group col">
             <label for="ASIN" class="form-label">Amazon ASIN</label>
             <input type="text" class="form-control" id="asin" placeholder="B0BDHV1TZ4" name="asin" [(ngModel)]="mobile.asin">
           </div>
         </div>
-        <div class="form-group mb-3">
+        <div class="form-group">
           <label for="sellingPrice" class="form-label">Selling Price</label>
           <input type="number" class="form-control" name="sellingPrice" [(ngModel)]="mobile.sellingPrice">
         </div>
-        <div class="form-group mb-3" *ngIf="!mobile._id else updateModel">
+        <div class="form-group" *ngIf="!mobile._id else updateModel">
           <button type="submit" class="btn btn-primary" (click)="addModel(productMaster)">Submit</button>
         </div>
         <ng-template #updateModel>
-          <div class="form-group mb-3">
-            <div class="form-group mb-3">
+          <div class="form-group">
+            <div class="form-group">
               <p>Created on: <strong>{{mobile.createdAt |date:format}}</strong></p>
               <p>Updated on: <strong>{{mobile.updatedAt|date:format}}</strong></p>
-              <div class="form-group mb-3" >
+              <div class="form-group" >
                 <button type="submit" class="btn btn-primary" (click)="updateMobile(productMaster)">Update</button>
               </div>              
             </div>
@@ -76,6 +75,7 @@
             <th>Brand</th>
             <th>Model</th>
             <th>Color</th>
+            <th>In stock</th>
             <th></th>
             <th></th>
           </tr>
@@ -85,8 +85,9 @@
             <td>{{m.brandName.name}}</td>
             <td>{{m.modelName}}</td>
             <td>{{m.color}}</td>
+            <td>{{m.tPur? m.instock +'/'+ m.tPur:'-'}}</td>
               <td><a (click)="onEdit(m)"><i class="bi bi-pencil-square"></i></a></td>
-              <td><a  (click)="deleteMobile(m._id)" ><i class="bi bi-trash"></i></a></td>
+              <td><a  (click)="showDeleteModal(m._id)" ><i class="bi bi-trash"></i></a></td>
           
           </tr>
         </tbody>
@@ -105,6 +106,22 @@
       <div class="modal-body">
         <app-brand-master (addBrandEvent)="addNewBrand($event)" > </app-brand-master>
       </div>
+    </div>
+  </div>
+</div>
+
+<!-- Delete Warning -->
+<div class="modal" id="deleteWarning">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <p class="modal-title">You're attempting to delete product Id <strong>{{selectedId}}</strong></p>
+      </div>
+        <div class="modal-body">
+            <p>Are you sure you want to delete this item</p>
+            <button class="btn btn-secondary" (click)="closeModal()">Close</button>
+            <button class="btn btn-danger" (click)="deleteMobile()">Delete</button>
+        </div>
     </div>
   </div>
 </div>
