--- a/src/app/components/product-master/product-master.component.scss
+++ b/src/app/components/product-master/product-master.component.scss
@@ -1,3 +1,11 @@
 .container {
     background-color: rgba(69, 66, 243, 0.3);
 }
+
+.btn-primary {
+    margin-left: 20px;
+}
+
+.btn-light {
+    margin-left: 10px;
+}
